--- a/css/mijn.css
+++ b/css/mijn.css
@@ -27,6 +27,7 @@ html{
   position: absolute;
   left:60px;
   top: 1233px;
+
 }
 
 .button{
@@ -39,6 +40,7 @@ html{
   text-align: center;
   position: absolute;
   left: 38%;
+  text-decoration: none;
 }
 
 .button:hover{
@@ -61,8 +63,52 @@ html{
 .oprah{
   height:1688px;
   width: 1600px;
-  background-color: blue;
+  background-color: white;
   position: absolute;
-  top: 8650px;
-  left: 160px;
+  top: 8652px;
+  left: 161px;
+  opacity: 0;
+  transition: 0.6s;
+}
+
+.oprah:hover {
+  opacity: 1;
+}
+
+.oprah .button {
+  top: 50%;
+  left: 35%;
+}
+
+.fotoOprah{
+  background-image: url(../img/OPRAH.jpg);
+  background-color: none;
+  opacity: 1;
+}
+
+.madonna{
+  height:654px;
+  width: 1300px;
+  position: absolute;
+  background-color: black;
+  top: 9188px;
+  left: 327px;
+  opacity: 0;
+  transition: 0.6s;
+  z-index: 10;
+}
+
+.madonna:hover{
+  opacity: 0.8;
+}
+
+.madonna .button {
+  top: 46%;
+  left: 35%;
+}
+
+.fotoMadonna{
+  background-image: url(../img/MADONNA.jpg);
+  background-color: none;
+  opacity: 1;
 }
