--- a/css/mijn.css
+++ b/css/mijn.css
@@ -159,6 +159,11 @@ html{
   opacity: 0;
   transition: 0.6s;
 }
+span{
+  font-size: 0.05rem;
+  color:black;
+  font-style: italic;
+}
 
 .paraThree{
   font-size: 0.1rem;
